--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -30,7 +30,7 @@ p {
 }
 
 .brand {
-  font-size: 72px;
+  font-size: 5vh;
   font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-weight: 1000;
   background: -webkit-linear-gradient(0deg, $adagio-green, #12973f);
